# Grimoire

./: .coveragerc  .coverignore  .gitconfig  .gitignore  .golangci.yml  GO_MIGRATION_PLAN.md  GRIMOIRE_SPEC.md  MIGRATION_CHECKLIST.md  Makefile  README.md  benchmark_test.go  build_optimized.py  codecov.yml  comparison.md  coverage_new.html  create_test_images.py  debug_compile.py  debug_detection.py  debug_output.txt  debug_parser.py  debug_parser2.py  fix_opencv_delay.py  go.mod  go.sum  grimoire  grimoire.spec  grimoire_optimized.spec  hello_ci.py  loop_output.py  programming-languages-research.md  pyproject.toml  pytest.ini  requirements-dev.txt  run_benchmarks.sh  runtime_hook.py  setup.py  setup_freeze.py  star_detection_analysis.md  test_author.txt  test_compiler.py  (+13 more)
.github/: KNOWN_ISSUES.md
.github/workflows/: build-binaries.yml  build-simple.yml  deploy-web.yml  go-benchmark-windows-fix.yml  go.yml  release.yml  test-web-deploy.yml  test.yml  test.yml.disabled  wasm-test.yml  web-e2e.yml
benchmark_results/: contours_comparison.txt  detector_comparison.txt
cmd/grimoire/: main.go
cmd/grimoire-wasm/: main.go  main_test.go
cpp_grimoire/: CMakeLists.txt
docs/: CONTRIBUTING.md  GO_MIGRATION.md  GO_VERSION_POLICY.md  PLATFORM_SUPPORT.md  TEST_STRATEGY.md  WINDOWS_BENCHMARK_ISSUE.md  ai-vs-traditional.md  compiler-spec-ja.md  compiler-spec.md  diagonal_connections.md  error_handling.md  examples-ja.md  implementation-guide-ja.md  language-spec-ja.md  language-spec.md  localization.md  magic-circle-design.md  performance-optimizations.md  platform-support.md  tutorial-ja.md
editor/: DESIGN.md  README.md  index.html  server.go
editor/css/: style.css
editor/examples/: fibonacci.json  hello_world.json
editor/js/: app.js  canvas.js  connections.js  export.js  symbols.js  tools.js
examples/: bubble-sort.grim.md  calculator.grim.md  euclidean-gcd.grim.md  fibonacci.grim.md  hello-world.grim.md  loop.grim.md  parallel.grim.md  prime-check.grim.md  stack-implementation.grim.md  string-reverse.grim.md  variables.grim.md
go_grimoire/: build.sh
go_grimoire_optimized/: main.go
go_poc/: go.mod  main.go
go_pure/: main.go
internal/cli/: cli.go  cli_commands_coverage_test.go  cli_commands_test.go  cli_coverage_test.go  cli_edge_cases_test.go  cli_integration_test.go  cli_mock_test.go  cli_realimage_test.go  cli_test.go  cli_unit_test.go
internal/compiler/: compiler.go  compiler_test.go
internal/detector/: COVERAGE_REPORT.md  connection.go  connection_improvements.go  connection_test.go  contour.go  debug.go  detector.go  detector_bench_test.go  detector_coverage_test.go  detector_format_test.go  detector_optimized.go  detector_optimized_bench_test.go  detector_optimized_v2.go  detector_security_test.go  detector_shape_test.go  detector_test.go  image_utils.go  pattern_detector.go  shape_classifier.go  shape_improvements.go  types.go
internal/errors/: debug.go  errors.go  (+3 more)
rust_grimoire/: Cargo.toml  README.md  build.rs
rust_grimoire/.github/workflows/: build.yml
rust_grimoire/src/: main.rs
rust_poc/: Cargo.toml
rust_poc/src/: main.rs
rust_pure/: Cargo.toml
rust_pure/src/: detector.rs  main.rs
scripts/: build.py  generate_sample_images.py
test/: README.md  e2e_calculator_test.go  e2e_loop_test.go  e2e_performance_test.go  e2e_test.go
tests/: __init__.py  conftest.py
tools/: add_double_circle.go
web/: build-wasm.sh  create_sample_images.py  hello-world-base64.txt  index.html  package-lock.json  package.json  server.py  test-wasm.js
(+56 files in other folders)
