[package]
name = "grimoire"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24"
imageproc = "0.23"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true