[package]
name = "grimoire"
version = "0.1.0"
edition = "2021"

[dependencies]
# 画像処理（Pure Rust）
image = "0.24"
imageproc = "0.23"

# コマンドライン
clap = { version = "4.4", features = ["derive"] }

# エラーハンドリング
anyhow = "1.0"
thiserror = "1.0"

# 並列処理
rayon = "1.8"

# 数学
nalgebra = "0.32"

# シリアライゼーション
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package."*"]
opt-level = 3